@@ -583,6 +583,7 @@
       <class name="test.dataprovider.issue1987.IssueTest"/>
       <class name="test.dataprovider.InterceptorTest"/>
       <class name="test.dataprovider.issue2255.IssueTest"/>
+      <class name="test.dataprovider.issue217.IssueTest"/>
     </classes>
   </test>
 
